@@ -1,5 +1,8 @@
 2003-03-19  Bradley Bell  <btb@icculus.org>
 
+	* arch/sdl/rbaudio.c, include/rbaudio.h: starting d2 cd detection
+	(cddb discid) support
+
 	* arch/sdl/digi.c, main/kludge.c: implemented
 	digi_link_sound_to_object3 for looping sounds, other looping stuff
 
